# static_logger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  demo.cc
src/: CMakeLists.txt  static_log.cc  static_log.h  static_log_backend.cc  static_log_backend.h  static_log_clock.h  static_log_common.h  static_log_cycles.c  static_log_cycles.cc  static_log_cycles.h  static_log_front.cc  static_log_front.h  static_log_internal.h  static_log_utils.h
unitest/: CMakeLists.txt  perf_latency.cc  perf_static_log.cc  perf_throughput.cc  perf_throughtput.cc  test_api.cc  test_mt.cc  test_utils.cc
