cmake_minimum_required(VERSION 3.10)
project(static_log)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(tsc_clock)
if (NOT UNITTEST)
    set(UNITTEST FALSE)
else ()
    set(UNITTEST TRUE)
endif()

if (${UNITTEST})
    add_subdirectory(googletest)
    add_subdirectory(unitest)
endif ()
add_subdirectory(src)
add_subdirectory(example)