cmake_minimum_required(VERSION 3.10)
project(static_log)
add_subdirectory(tsc_clock)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/ src)
add_library(static_log ${src})
target_include_directories(static_log PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../tsc_clock/src)
target_include_directories(static_log PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src)
target_link_directories(static_log PRIVATE tscns)