cmake_minimum_required(VERSION 3.10)
project(static_log)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
    message(STATUS "No CMAKE_BUILD_TYPE selected, config default value to ${CMAKE_BUILD_TYPE}")
endif()
add_compile_options(-Wall)
if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    add_compile_options(-ggdb -O0)
else()
    add_compile_options(-march=native)
    add_compile_options(-O3 -g)
endif()
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/ src)
add_library(static_log ${src})
target_include_directories(static_log PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../tsc_clock/src)
target_include_directories(static_log PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src)
target_link_directories(static_log PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../tsc_clock/output/lib)
target_link_libraries(static_log PRIVATE tscns pthread)