cmake_minimum_required(VERSION 3.10)
project(unitest)
add_compile_options(-g -O0)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../src)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../tsc_clock/src)
add_executable(test_utils test_utils.cc)
target_link_libraries(test_utils gtest)

add_executable(perf_str perf_static_log.cc)
target_link_libraries(perf_str PRIVATE tscns static_log pthread)
target_link_directories(perf_str PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../tsc_clock/output/lib)
