cmake_minimum_required(VERSION 3.10)
project(unitest)
add_subdirectory(spdlog)
# add_subdirectory(nanolog)
add_compile_options(-g -O0)
# add_compile_options(-march=native)
# add_compile_options(-O3)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../src)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../tsc_clock/src)
add_executable(test_utils test_utils.cc)
target_link_libraries(test_utils gtest)

add_executable(perf_str perf_static_log.cc)
target_include_directories(perf_str PRIVATE ${CMAKE_CURRENT_LIST_DIR}/nanolog/runtime)
target_include_directories(perf_str PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../)
target_link_directories(perf_str PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../tsc_clock/output/lib)
target_link_directories(perf_str PRIVATE ${CMAKE_CURRENT_LIST_DIR}/nanolog/runtime)
target_link_libraries(perf_str PRIVATE tscns static_log spdlog NanoLog aio rt pthread)

add_executable(tst_api test_api.cc)
target_link_libraries(tst_api tscns static_log pthread)